# named-id

./: Cargo.toml  README.md
aliased-id-derive/: Cargo.toml
aliased-id-derive/src/: lib.rs
named-id-derive/: Cargo.toml
named-id-derive/src/: lib.rs
src/: aliasable.rs  aliased_id.rs  contains_aliases.rs  lib.rs  nameable.rs  nameables.rs  newtype.rs  renamed.rs  short.rs  tests.rs
src/nameables/: impls.rs
tests/: tests.rs
tests/compile_fail/: rename_all_error_site.rs  rename_all_error_site.stderr
