[package]
name = "aliased-id"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
derive_more = { version = "1.0", features = ["full"] }
hex = "0.4.3"
pretty_assertions = "1.4"
tracing-subscriber = "0.3"
